--- a/src/assets/css/Global.css
+++ b/src/assets/css/Global.css
@@ -4,3 +4,19 @@ html, body, #app {
   margin: 0;
   padding: 0;
 }
+
+.el-breadcrumb {
+  margin-bottom: 25px;
+}
+
+.el-card {
+  box-shadow: 0 1px 1px rgb(0, 0, 0, 0.15) !important;  /*因为它自己一开始的样式权重比较高，所以使用important*/
+}
+
+.el-table {
+  margin-top: 25px;
+}
+
+.el-pagination {
+  margin-top: 30px;
+}
