--- a/src/assets/css/Global.css
+++ b/src/assets/css/Global.css
@@ -3,6 +3,7 @@ html, body, #app {
   height: 100%;
   margin: 0;
   padding: 0;
+  min-width: 1356px;  /*当屏幕右侧出现侧边栏时，使其宽度小于1356px时就不再缩小了，而是出现滚动条*/
 }
 
 .el-breadcrumb {
@@ -19,4 +20,20 @@ html, body, #app {
 
 .el-pagination {
   margin-top: 30px;
+}
+
+.el-tag {
+  margin: 7px
+}
+
+.bdtop {
+  border-top: 1px solid #eeeeee
+}
+.bdbottom {
+  border-bottom: 1px solid #eeeeee;
+}
+
+.vcenter {  /*在角色列表中，如果谁需要居中就用这个类*/
+  display: flex;
+  align-items: center;
 }
